Fix 8 code inconsistencies for Spring Boot 3.3.4 / Java 17 compliance
- Replace @Data with @Getter/@Setter on JPA entity, add business-key equals/hashCode
- Replace static DataFormatter with ThreadLocal for thread safety
- Replace Paths.get() with Path.of() (Java 11+ preferred API)
- Replace explicit constructor with @RequiredArgsConstructor in orchestrator
- Remove dead getSkipColumns() from ExcelImportConfig interface and implementations
- Fix result.html to use Thymeleaf URL expression @{...} instead of raw ${...}
- Add @SuppressWarnings("unchecked") for inherent generic cast in orchestrator
- Update README architecture tree to match actual package structure
- Add CLAUDE.md with project rules and coding standards

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>